--- a/WeatherAPI1/index.html
+++ b/WeatherAPI1/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+
+    <!-- Blured loader -->
+    <div class="blurred"> 
+    </div>
+
     <div class="card">
         <div class="search">
             <input type="text" name="" id="" class="search-bar" placeholder="Search">
@@ -34,6 +39,12 @@
             </div>
             <div class="humidity">Humidity: 60%</div>
             <div class="wind">Wind speed: 6.2 km/h</div>
+        </div>
+        <div class="loading_message no_location">
+            <h3>Choose a location</h3>
+        </div>
+        <div class="invalid_message">
+            <h3>Invalid Location</h3>
         </div>
     </div>
 </body>
