Five days weather forecast

--- a/WeatherAPI1/index.html
+++ b/WeatherAPI1/index.html
@@ -59,10 +59,18 @@
                 </div>
             </div>
             <!-- 5 days weather forecast -->
-            <div class="weather_forecast_container">
+            <div class="weather_forecast_container" id="test">
 
-                <div class="weather_forecast_container__header">
+                <!-- <div class="weather_forecast_container__header">
                     <h1>Five days weather forecast</h1>
+                </div> -->
+
+                <!-- <div class="weather_forecast">
+                    <h1 class="weather__temp">51°C</h1>
+                    <div class="weather__description_icon">
+                        <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="weather__icon">
+                        <div class="weather__description">Broken Clouds</div>
+                    </div>
                 </div>
 
                 <div class="weather_forecast">
@@ -72,7 +80,6 @@
                         <div class="weather__description">Broken Clouds</div>
                     </div>
                 </div>
-
                 <div class="weather_forecast">
                     <h1 class="weather__temp">51°C</h1>
                     <div class="weather__description_icon">
@@ -86,21 +93,14 @@
                         <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="weather__icon">
                         <div class="weather__description">Broken Clouds</div>
                     </div>
-                </div>
-                <div class="weather_forecast">
+                </div> -->
+                <!-- <div class="weather_forecast">
                     <h1 class="weather__temp">51°C</h1>
                     <div class="weather__description_icon">
                         <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="weather__icon">
                         <div class="weather__description">Broken Clouds</div>
                     </div>
-                </div>
-                <div class="weather_forecast">
-                    <h1 class="weather__temp">51°C</h1>
-                    <div class="weather__description_icon">
-                        <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="weather__icon">
-                        <div class="weather__description">Broken Clouds</div>
-                    </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
