--- a/WeatherAPI1/index.html
+++ b/WeatherAPI1/index.html
@@ -10,6 +10,7 @@
     <!-- JS -->
     <script src="main.js" defer></script>
     <title>Weather App</title>
+    <link rel="icon" type="image/x-icon" href="images/logowhitecropped.png">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
     <header>
         <div class="header">
             <h1>OpenWeather REST API</h1>
-            <img src="images/cloud_icon.png" alt="cloud_icon" width="50px" height="50px">
+            <img src="images/logo_white_cropped.png" alt="cloud_icon" width="120px" height="50px">
         </div>
     </header>
 
