fixed github configuration

--- a/text_message/index.html
+++ b/text_message/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,9 @@
     <script src="create-message.js" defer></script>
     <title>Text Message</title>
 </head>
+
 <body>
-    
+    <!-- THIS SHIT IS NOT WORKING IN A WEB APPLICATION -->
     <div class="background">
         <div class="form">
             <div class="form_header">
@@ -32,10 +34,11 @@
                 <!-- cols="30" rows="10" -->
             </div>
             <div class="row">
-                <input type="submit" name="submit" id="submit"  value="Send" onclick="validateMessage()">
+                <input type="submit" name="submit" id="submit" value="Send" onclick="validateMessage()">
             </div>
         </div>
     </div>
 
 </body>
+
 </html>
